--- a/backend/src/main/webapp/liff/main.html
+++ b/backend/src/main/webapp/liff/main.html
@@ -26,6 +26,7 @@
 <script src="/backend/app/scripts/services/httpInterceptor.js"></script>
 <script src="/backend/liff/orderCtrl.js"></script>
 <script src="/backend/liff/showOrder/showOrderCtrl.js"></script>
+<script src="/backend/liff/result/lottoResultCtrl.js"></script>
 </head>
 <body ng-app="sbAdminApp" class="noncopy">
 	<div style="padding-top: 3px;">
