--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/xeditable.min.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -61,6 +62,7 @@
     <script src="lib/angular-drag-and-drop-lists.min.js"></script>
     <script src="lib/ng-tags-input.min.js"></script>
     <script src="lib/angular-base64-upload.min.js"></script>
+    <script src="lib/xeditable.min.js"></script>
     
     <!-- endbower -->
     <!-- endbuild -->
