--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -50,7 +50,7 @@
 		                <a ui-sref="dashboard.dmsCustomer.search"><i class="fa fa-address-book-o fa-fw"></i> Customers</a>
 		            </li>
 	                <li ui-sref-active="active">
-		                <a ui-sref="dashboard.dmsCustomer.doc"><i class="fa fa-book fa-fw"></i> Documents</a>
+		                <a ui-sref="dashboard.dmsProduct.product"><i class="fa fa-book fa-fw"></i> Documents</a>
 		            </li>
                 </ul>
             </li>
