--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -7,7 +7,7 @@
                 <a ui-sref="dashboard.home" ng-click="check(0)"><i class="fa fa-home fa-fw"></i> หน้าหลัก</a>
             </li>
             <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
-                <a ui-sref="dashboard.order" ng-click="check(0)"><i class="fa fa-book fa-fw"></i> บันทึกข้อมูล</a>
+                <a ui-sref="dashboard.order" ng-click="check(0)"><i class="fa fa-book fa-fw"></i> ข้อมูลรวม</a>
             </li>
             <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
                 <a ui-sref="dashboard.manageOrder" ng-click="check(0)"><i class="fa fa-sitemap fa-fw"></i> จัดการข้อมูล</a>
