--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -63,6 +63,7 @@
     <script src="lib/ng-tags-input.min.js"></script>
     <script src="lib/angular-base64-upload.min.js"></script>
     <script src="lib/xeditable.min.js"></script>
+    <script src="lib/angular-file-upload.min.js"></script>
     
     <!-- endbower -->
     <!-- endbuild -->
