--- a/backend/src/main/webapp/liff/result/main.html
+++ b/backend/src/main/webapp/liff/result/main.html
@@ -27,40 +27,24 @@ thead > tr > th, tbody > tr > td {
 	    </div>
 	    
 		<div style="overflow: auto;">
-         	<table class="table table-hover gambler-panel result-table">
+			<table class="table table-hover gambler-panel result-table">
 			    <thead>
 					<tr>
 						<th>#</th>
 						<th>ชื่อ</th>
-						<th>3 ตัวบน</th>
-						<th>3 ตัวโต๊ด</th>
-						<th>2 ตัวบน</th>
-						<th>2 ตัวล่าง</th>
-						<th>ลอย</th>
-						<th>แพ 4</th>
-						<th>แพ 5</th>
-						<th>วิ่งบน</th>
-						<th>วิ่งล่าง</th>
+						<th ng-repeat="t in titles | filter:{show: true}">{{ t.title }}</th>
 					</tr>
 			    </thead>
-				<!-- <tbody ng-repeat="lst in lottoResult" ng-init="dymColor = colors[$index % 4];"> -->
 				<tbody>
-			     	<tr ng-repeat="res in lottoResult">
+					<tr ng-repeat="res in resultFormated">
 						<td>{{ $index + 1 }}</td>
 						<td>{{ res.name }}</td>
-						<td><span class="badge win-price">{{ res.result3_price }}</span></td>
-						<td><span class="badge win-price">{{ res.resultTod_todPrice }}</span></td>
-						<td><span class="badge win-price">{{ res.resultBon2_price }}</span></td>
-						<td><span class="badge win-price">{{ res.resultLang2_price }}</span></td>
-						<td><span class="badge win-price">{{ res.loy_price }}</span></td>
-						<td><span class="badge win-price">{{ res.pair4_price }}</span></td>
-						<td><span class="badge win-price">{{ res.pair5_price }}</span></td>
-						<td><span class="badge win-price">{{ res.runBon_price }}</span></td>
-						<td><span class="badge win-price">{{ res.runLang_price }}</span></td>
+			     		<td ng-repeat="t in titles | filter:{show: true}">
+			     			<span class="badge win-price">{{ res[t.field] | number:0 }}</span>
+			     		</td>
 					</tr>
 		    	</tbody>
 			</table>
 		</div>
-              
 	</div>
 </div>
