--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/animate.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/xeditable.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/previewer.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -64,6 +65,7 @@
     <script src="lib/angular-base64-upload.min.js"></script>
     <script src="lib/xeditable.min.js"></script>
     <script src="lib/angular-file-upload.min.js"></script>
+    <script src="lib/img-previewer.js"></script>
     
     <!-- endbower -->
     <!-- endbuild -->
