--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -12,8 +12,16 @@
             <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
                 <a ui-sref="dashboard.manageOrder" ng-click="check(0)"><i class="fa fa-sitemap fa-fw"></i> จัดการข้อมูล</a>
             </li>
-            <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
-                <a ui-sref="dashboard.uploadFile" ng-click="check(0)"><i class="fa fa-cloud-upload fa-fw"></i> Upload File</a>
+            <li ng-class="{active: collapseVar == 4}" ng-show="$root.workingOnDealer.id">
+                <a href="" ng-click="check(4)"><i class="fa fa-file-image-o fa-fw"></i> ข้อมูลรูป<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level" collapse="collapseVar != 4">
+                	<li ui-sref-active="active">
+		                <a ui-sref="dashboard.uploadFile"><i class="fa fa-cloud-upload fa-fw"></i> Upload File</a>
+		            </li>
+                	<li ui-sref-active="active">
+		                <a ui-sref="dashboard.inputView"><i class="fa fa-television fa-fw"></i> ลงข้อมูล</a>
+		            </li>
+                </ul>
             </li>
             <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
                 <a ui-sref="dashboard.lottoResult" ng-click="check(0)"><i class="fa fa-desktop fa-fw"></i> ผลสลาก</a>
