--- a/backend/src/main/webapp/liff/order.html
+++ b/backend/src/main/webapp/liff/order.html
@@ -7,7 +7,8 @@
 <div ui-view>
 	<div style="text-align: center;">
 	      	<div style="margin: auto; color: #c1c1c1;">
-				<div id="valueBox" style="overflow: auto; width: 100%; height: 108px; text-align: left; margin-bottom: 5px;">
+				<div id="valueBox" style="overflow: auto; width: 100%; height: 108px; text-align: left; margin-bottom: 5px;" 
+					 ng-style="(isOnOrderImg && orderList.length == 0) ? {'border': '1px dashed #68aad1'} : {}">
 					<span class="btn btn-outline btn-info" style="padding: 0 3px; border-color: rgb(141 141 141); font-size: 1.3em;" 
 						  ng-repeat='ord in orderList' ng-click="updateOrdSet(ord, $index)">
 						{{ ord.orderNumberSet }} {{ ord.typeObj.type == 23 ? 'บนล่าง' : (ord.typeObj.type == 2 ? 'บน' : (ord.typeObj.type == 3 ? 'ล่าง' : 
@@ -56,10 +57,14 @@
 				<div style="margin: auto; text-align: center; margin-top: 20px; height: 50px;">
 					<button type="button" class="btn btn-outline btn-warning btn-lg" ng-show="orderList.length > 0" ng-click="clearOrderList()">ล้างข้อมูล</button>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<button type="button" class="btn btn-outline btn-success btn-lg" ng-show="orderList.length == 0" ng-click="showOrder()">แสดงข้อมูลซื้อ</button>
 					<button type="button" class="btn btn-outline btn-success btn-lg" ng-show="orderList.length > 0 && !keyword" ng-click="askName()">
 						ส่งข้อมูล
 					</button>
+					
+					<button type="button" class="btn btn-outline btn-success btn-lg" ng-show="orderList.length == 0" ng-click="showOrder()" ng-disabled="inProgress">แสดงข้อมูลซื้อ</button>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<button type="button" class="btn btn-outline btn-success btn-lg" ng-show="orderList.length == 0 && isOnOrderImg" ng-click="requestImg()" ng-disabled="inProgress">{{ inProgress ? 'กรุณารอ..' : 'ข้อมูลภาพ' }}</button>
+					
 				</div>
 		
 		</div>
