--- a/backend/src/main/webapp/liff/home.html
+++ b/backend/src/main/webapp/liff/home.html
@@ -1,10 +1,21 @@
+<style>
+	.bling_me {
+		animation: blinker 1s linear infinite;
+		/* color: #f3d921; */
+	}
+	@keyframes blinker {
+	  50% {
+	    opacity: 0;
+	  }
+	}
+</style>
 <div style="text-align: center; margin-bottom: 5px;" ng-click="goHome()">
 	<span class="badge badge-cus" style="cursor: pointer;">
 	{{ workingOnDealer.name + ' | ' + (period.periodDateTime | date:'dd-MM-yyyy') + ' | ' + showname }}
 	</span><br />
-	<span class="badge badge-cus" style="border-radius: 0 0 10px 10px; background-color: #89cef6; 
-	      background: linear-gradient(rgba(104,170,209,1) 0%, rgb(8 87 106) 100%);" ng-style="imgFileDetail.saved ? {'color': '#ffdf40'} : {'color': '#ddd'}" ng-show="imgFileDetail">
-	{{ imgFileDetail.customerName + ' (' + imgFileDetail.code + ')' }}
+	<span class="badge badge-cus" style="border-radius: 0 0 10px 10px; color: #000000;
+	      background: linear-gradient(rgba(104,170,209,1) 0%, rgb(8 87 106) 100%);" ng-show="imgFileDetail">
+	{{ imgFileDetail.customerName + ' (' + imgFileDetail.code + ')' }} <span class="bling_me" style="color: #ffdf40">{{ imgFileDetail.saved ? 'Saved' : '' }}</span>
 	</span>
 </div>
 <div ui-view style="padding: 0 10px 0 10px;"></div>
