--- a/backend/src/main/webapp/liff/main.html
+++ b/backend/src/main/webapp/liff/main.html
@@ -22,6 +22,7 @@
 <script src="/backend/app/lib/ngStorage.min.js"></script>
 <script src="/backend/app/lib/ui-bootstrap-tpls.min.js"></script>
 <script src="/backend/app/lib/jquery.touchSwipe.min.js"></script>
+<script src="/backend/app/lib/qrcode.min.js"></script>
 
 <script src="/backend/liff/app.js"></script>
 <script src="/backend/app/scripts/services/httpInterceptor.js"></script>
