--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -416,6 +416,12 @@
         		<a ui-sref="dashboard.chatConsole" style="color: #337AB7;"><i class="fa fa-desktop fa-fw"></i> Chat Console</a>
             </li>
             <li class="divider" ng-show="group0"></li>
+            
+            <li ng-if="workingOnProduct.id != null && group1">
+        		<a ui-sref="dashboard.userLog" style="color: #337AB7;"><i class="fa fa-history fa-fw"></i> User Log</a>
+            </li>
+            <li class="divider" ng-show="workingOnProduct.id != null && group1"></li>
+            
         	<li>
         		<a ui-sref="dashboard.product.search" style="color: #337AB7;"><i class="fa fa-bank fa-fw"></i> โปรดักส์</a>
             </li>
