--- a/backend/src/main/webapp/liff/askName.html
+++ b/backend/src/main/webapp/liff/askName.html
@@ -4,5 +4,11 @@
         <input type="text" class="form-control autocomplete" ng-model="formData.name" 
         	   uib-typeahead="name for name in names | filter: $viewValue">
     </div>
+    
+    <div class="form-group" ng-if="sendRoundList">
+    	<label>รอบส่ง</label>
+	    <select class="form-control" ng-disabled="imgFileDetail.sendRoundId" ng-model="formData.sendRoundId" ng-options="option.id as option.desc for option in sendRoundList"></select>
+    </div>
+    
 </form>
 <br /><br /><br /><br /><br />
